Fix color chooser select on Safari

--- a/css/KeiEditor.css
+++ b/css/KeiEditor.css
@@ -47,16 +47,23 @@
 .color-option {
 	border:1px solid #000000;
 	cursor:pointer;
-	height: 20px;
 	float: left;
+	height: 20px;
 	width: 20px;
+}
+.color-chosen {
+	border:1px solid #000000;
+	float: left;
+	height: 20px;
+	margin-top:20px;
+	width: 100%;
 }
 
 #keieditable {
 	border:solid 3px #d3d3d3;
 	margin-left:1%;
 	margin-right:1%;
-	margin-top:70px;
+	margin-top:100px;
 	min-height:20rem;
 	padding:10px;
 	width: auto;
